--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
     const itemsList = document.querySelector('.plates');
     const items = [];
 
-    addItems.addEventListener('submit', addItem);
 
     function addItem(e) {
       e.preventDefault();
@@ -60,13 +59,23 @@
         done: false
       }
       items.push(item);
+      populateList(items, itemsList)
       this.reset()
     }
 
     // Set up as a generalized function, allows it to be modified later in order to add more lists/locations
     function populateList(plates = [], platesList) {
-
+      platesList.innerHTML = plates.map((plate, i) => {
+        return `
+          <li>
+            <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
+            <label for="item${i}"> ${plate.text}</label>
+          </li>
+        `;
+      }).join('');
     };
+
+    addItems.addEventListener('submit', addItem);
 
   </script>
 
