--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
     const addItems = document.querySelector('.add-items');
     const itemsList = document.querySelector('.plates');
-    const items = [];
-
+    // const items = JSON.parse(localStorage.getItem('items')) || [];
+    const items = localStorage.getItem('items') ? JSON.parse(localStorage.getItem('items')) : [];
 
     function addItem(e) {
       e.preventDefault();
@@ -60,6 +60,7 @@
       }
       items.push(item);
       populateList(items, itemsList)
+      localStorage.setItem('items', JSON.stringify(items));
       this.reset()
     }
 
@@ -75,7 +76,16 @@
       }).join('');
     };
 
+    function toggleDone(e) {
+      if (!e.target.matches('input')) return; // Skip UNLESS it is an input
+      console.log(e.target);
+    };
+
     addItems.addEventListener('submit', addItem);
+    itemsList.addEventListener('click', toggleDone)
+
+    populateList(items, itemsList);
+
 
   </script>
 
