--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
 
     function toggleDone(e) {
       if (!e.target.matches('input')) return; // Skip UNLESS it is an input
-      console.log(e.target);
+      const el = e.target;
+      const index = el.dataset.index;
+      items[index].done = !items[index].done;
+      localStorage.setItem('items', JSON.stringify(items));
+      populateList(items, itemsList);
     };
 
     addItems.addEventListener('submit', addItem);
